Add company icons and further align content
added more grids and styled more elements

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,12 +1,12 @@
 .nav-container {
     display: flex;
     justify-content: space-between;
-    margin: var(--size-50);
+    margin: var(--size-40);
 }
 
-.nav-logo {
-
-}
+    .nav-container img {
+        width: var(--size-150);
+    }
 
 .nav-links a {
     color: var(--font-color-base);
@@ -18,6 +18,60 @@
        font-size: var(--size-20);
     }
 
+.empowerment-container {
+    display: inline-flex;
+    margin-left: var(--size-100);
+    margin-top: var(--size-100);
+    gap: var(--size-150);
+}
+
+
+
+
+
+.icon-logo-container {
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    grid-template-rows: repeat(5, 1fr);
+    margin-right: var(--size-100);
+    grid-row-gap: var(--size-50);
+    grid-column-gap: var(--size-50);
+    margin-top: var(--size-50);
+}
+
+
+
+
+
+.paypal {
+    grid-area: 3 / 1 / 4 / 2;
+}
+
+.google {
+    grid-area: 1 / 1 / 2 / 2;
+}
+
+.atlassian {
+    grid-area: 1 / 3 / 2 / 4;
+}
+
+.google-a {
+    grid-area: 4 / 3 / 5 / 4;
+}
+
+.weave {
+    grid-area: 3 / 5 / 4 / 6;
+}
+
+.asana {
+    grid-area: 1 / 7 / 2 / 8;
+}
+
+.calender {
+    grid-area: 5 / 7 / 6 / 8;
+}
+
+    
 
 .empower h1 {
     font-size: var(--size-50);
@@ -35,6 +89,14 @@
     margin-top: var(--size-30);
     margin-left: var(--size-16);
 }
+
+.empowerment-container img {
+    width: var(--size-50);
+    border-style: groove;
+    border-radius: 100%;
+    padding: var(--size-10);
+}
+
 
 .service-header {
     margin-top: var(--size-50);
@@ -81,6 +143,13 @@
         font-size: var(--size-20);
     }
 
+    .service-card span {
+        font-size: var(--size-16);
+        background-color: #1ac731;
+        padding: var(--size-10);
+        border-radius: var(--size-20);
+        color: var(--white);
+    }
 
 
     .perspective-container {
@@ -97,6 +166,8 @@
 
 .why-front {
     text-align: center;
+    margin-top: var(--size-150);
+    margin-bottom: var(--size-150);
 }
 
 .why-front h2 {
@@ -107,6 +178,32 @@
     font-size: var(--size-20);
 }
 
+.four-dots {
+    display: flex;
+    justify-content: space-around;
+    font-size: var(--size-30);
+}
+
+    .four-dots li {
+        background-color: cornflowerblue;
+        border-radius: 100%;
+        width: var(--size-50);
+        text-align: center;
+        margin-bottom: var(--size-50);
+    }
+
+
+
+
+.dot-offers {
+    display: flex;
+    justify-content: space-around;
+    font-size: var(--size-20);
+    margin-bottom: var(--size-50);
+}
+
+
+
 
 .full-image img {
     width: -webkit-fill-available;
@@ -115,17 +212,31 @@
 
 
 .executive-container {
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 1fr;
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+    margin-left: var(--size-100);
+    background-image: url("/assets/abstract/dots.svg");
 }
-
 
 .executive-director {
-    margin-left: auto;
+    grid-area: 1 / 1 / 2 / 2;
+    
 }
 
-.executive-director img {
-    width: 70%;
+.testimonial {
+    grid-area: 1 / 2 / 2 / 3;
 }
+
+
+
+
+    .executive-director img {
+        width: 85%;
+        
+    }
 
 .hubspot-logo {
     width: var(--size-150);
@@ -163,7 +274,7 @@
 
 .pricing-header {
     text-align: center;
-    margin-bottom: var(--size-100);
+    margin-bottom: var(--size-50);
     margin-top: var(--size-100);
 }
 
@@ -179,7 +290,7 @@
 
 .pricing-container {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: 2fr repeat(2, 1fr);
     grid-template-rows: repeat(2, 1fr);
     grid-column-gap: var(--size-100);
     grid-row-gap: 0px;
@@ -209,19 +320,23 @@
 
 
 .price-card {
-    border-style: inset;
+    border-style: outset;
     padding: var(--size-50);
     margin-left: auto;
+    width: -webkit-fill-available;
+    box-shadow: 0 5px 5px #a09f9f;
 }
 
 
 
     .price-card h4 {
-        font-size: var(--size-40);
+        font-size: var(--size-50);
     }
 
     .price-card p {
         color: var(--font-color-base);
+        font-size: var(--size-20);
+        margin-top: var(--size-30);
     }
 
 .pricing-subcard img {
@@ -235,6 +350,7 @@
 
 .pricing-subcard p {
     color: var(--font-color-base);
+    font-size: var(--size-16);
 }
 
 
@@ -309,10 +425,12 @@
     .input-group input {
         width: -webkit-fill-available;
         color: var(--font-color-base);
+        font-size: var(--size-18);
     }
 
     .input-group select {
         width: -webkit-fill-available;
+        font-size: var(--size-18);
     }
 
 .form-text-area {
@@ -320,6 +438,7 @@
     margin-top: inherit;
     height: var(--size-150);
     color: var(--font-color-base);
+    font-size: var(--size-18);
 }
 
 .bottom-form-text {
