Refactor and add more css

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -210,26 +210,32 @@
     margin: var(--size-30);
 }
 
-
 .executive-container {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: 1fr;
     grid-column-gap: 0px;
     grid-row-gap: 0px;
-    margin-left: var(--size-100);
-    background-image: url("/assets/abstract/dots.svg");
+    margin-left: var(--size-150);
 }
+
 
 .executive-director {
     grid-area: 1 / 1 / 2 / 2;
-    
 }
 
 .testimonial {
     grid-area: 1 / 2 / 2 / 3;
 }
 
+
+
+.executive-dots {
+    width: 27%;
+    position: absolute;
+    right: 85%;
+    z-index: -1;
+}
 
 
 
