--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -1,9 +1,22 @@
 @media (min-width: 768px) and (max-width: 1023px) {
 
+
+    body {
+        background-color: blue;
+    }
+
     .nav-links {
         display: none;
     }
 
+
+    .navbar-toggler {
+        display: contents
+    }
+
+    .navbar-toggler:hover {
+        display: block
+    }
 
     .empowerment-container {
         display: flex;
@@ -67,6 +80,10 @@
     }
 
     }
+
+.perspective-image img {
+    width: -webkit-fill-available;
+}
 
     .pricing-container {
         display: grid;
@@ -200,6 +217,11 @@
             display: none;
         }
 
+
+        .navbar-toggler {
+            display: contents
+        }
+
         .empowerment-container {
             display: flex;
             flex-direction: column;
@@ -235,8 +257,7 @@
         }
 
 
-        .full-image img {
-            margin: 0;
+        .perspective-image img {
             width: -webkit-fill-available;
         }
 
@@ -289,12 +310,15 @@
             display: flex;
             flex-direction: column;
             align-items: center;
+            margin-left: 0;
+            text-align: center;
         }
 
 
         .bottom-footer {
             flex-direction: column;
             align-items: center;
+
         }
 
         }
