--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -27,7 +27,7 @@
     }
 
     .icon-logo-container {
-        margin: 0;
+        margin-right: 0;
     }
 
 
@@ -84,6 +84,41 @@
 .perspective-image img {
     width: -webkit-fill-available;
 }
+
+
+.executive-container {
+    display: grid;
+    grid-template-columns: .5fr 1fr;
+    grid-template-rows: repeat(2, 1fr);
+    grid-column-gap: 0px;
+    grid-row-gap: var(--size-50);
+    margin-right: 0;
+}
+}
+
+
+.executive-dots {
+    grid-area: 1 / 1 / 2 / 2;
+}
+
+.executive-director {
+    grid-area: 1 / 2 / 2 / 3;
+}
+
+.testimonial {
+    grid-area: 2 / 1 / 3 / 3;
+    text-align: center;
+}
+
+
+
+.executive-dots {
+    left: 75%;
+    position: relative;
+    top: 17%;
+    z-index: -1;
+}
+
 
     .pricing-container {
         display: grid;
@@ -228,6 +263,11 @@
             align-items: center;
             margin: 0;
             gap: var(--size-50);
+        }
+
+
+        .icon-logo-container {
+            margin-right: 0
         }
 
 
