--- a/styles/default.css
+++ b/styles/default.css
@@ -37,6 +37,11 @@ body {
     padding: 0;
 }
 
+
+* {
+    outline: 1px solid #f00 !important;
+}
+
 ::after ::before {
     box-sizing: border-box;
 }
