--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -256,7 +256,7 @@
 
     .hire-human {
         position: relative;
-        left: 107%;
+        left: 100%;
         bottom: 40%;
         justify-content: space-evenly;
         padding-right: var(--size-50);
@@ -328,16 +328,20 @@
       }
 
         [aria-expanded="true"] ~ ul {
-            display: block;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: space-evenly;
             position: absolute;
             right: 0;
             top: var(--size-100);
-            background-image: linear-gradient(to right, transparent, rgba(255, 255, 255, 0.7));
-            width: 100%;
-            text-align: right;
+            /* background-image: linear-gradient(to right, transparent, rgba(255, 255, 255, 0.7)); */
+            width: -webkit-fill-available;
+            height: -webkit-fill-available;
             box-shadow: 0px 0px 20px rgb(52 49 75 / 10%);
+            background-color: whitesmoke;
+            padding-top: 0rem;
         }
-
 
             [aria-expanded="true"] ~ ul li a {
                 margin-right: var(--size-20);
@@ -348,6 +352,23 @@
                 text-transform: uppercase;
                 margin-right: 2.5rem;
                 line-height: 1.25rem;
+            }
+
+            .trigram-menu li a {
+                text-align: center;
+            }
+
+        .trigram-menu li button {
+            position: absolute;
+            bottom: 8%;
+            right: 30%;
+            padding: var(--size-20);
+            width: var(--size-150);
+        }
+
+
+            .trigram-menu li button a {
+                margin-right: 0;
             }
 
         [aria-controls=navbarDropdown] {
@@ -369,11 +390,16 @@
             align-items: center;
             margin: 0;
             gap: var(--size-50);
+            text-align: center;
         }
 
 
         .icon-logo-container {
-            margin-right: 0
+            margin-right: 0;
+            grid-row-gap: 0rem;
+            grid-column-gap: 0rem;
+            margin-top: 0rem;
+           
         }
 
 
@@ -394,7 +420,6 @@
 
         .perspective-container {
             display: flex;
-            /* justify-content: space-evenly; */
             flex-direction: column;
         }
 
@@ -407,6 +432,11 @@
             width: -webkit-fill-available;
         }
 
+        .why-front {
+            margin-top: var(--size-50);
+            margin-bottom: var(--size-50);
+        }
+
 
         #line-dot {
             display: none;
@@ -415,8 +445,8 @@
         .four-dots {
             display: inline-flex;
             flex-direction: column;
-            margin-left: var(--size-150);
             gap: var(--size-40);
+            margin-left: var(--size-50);
         }
 
         .dot-offers {
@@ -426,13 +456,19 @@
             gap: var(--size-100);
         }
 
+        .full-image {
+            width: -webkit-fill-available;
+            margin-top: var(--size-30);
+        }
+
         .executive-container {
             display: grid;
             grid-template-columns: .5fr 1fr;
-            grid-template-rows: repeat(2, 1fr);
+            grid-template-rows: repeat(2, .5fr);
             grid-column-gap: 0px;
             grid-row-gap: var(--size-50);
             margin-right: 0;
+            margin-top: var(--size-50);
         }
 
 
@@ -443,6 +479,8 @@
 
         .executive-director {
             grid-area: 1 / 2 / 2 / 3;
+            position: relative;
+            right: 25%;
         }
 
         .testimonial {
@@ -453,9 +491,9 @@
 
 
         .executive-dots {
-            left: 75%;
+            left: 25%;
             position: relative;
-            top: 17%;
+            top: 8%;
             z-index: -1;
         }
 
@@ -477,13 +515,18 @@
             display: flex;
             flex-direction: column;
             gap: var(--size-30);
+            margin: var(--size-20);
         }
 
+        .price-card {
+            margin: var(--size-20);
+        }
 
 
         .hire-us {
             display: flex;
             flex-direction: column;
+            margin-top: 0;
         }
 
 
@@ -512,6 +555,19 @@
             margin-right: auto;
         }
 
+        .input-group {
+            flex-direction: column;
+            height: auto;
+        }
+
+            .input-group input {
+                height: var(--size-40);
+            }
+
+            .input-group select {
+                height: var(--size-40);
+            }
+
 
 
         .footer-container {
@@ -529,4 +585,58 @@
         }
 
 
+        #bottom-directory {
+            width: max-content;
+        }
+
+
+        .social-buttons {
+            display: grid;
+            grid-template-columns: repeat(4, .1fr);
+            grid-template-rows: repeat(2, .1fr);
+        }
+
+        #face {
+            grid-area: 1 / 1 / 2 / 2;
+        }
+        #goog {
+            grid-area: 1 / 2 / 2 / 3;
+        }
+        #twit {
+            grid-area: 1 / 3 / 2 / 4;
+        }
+        #gith {
+            grid-area: 1 / 4 / 2 / 5;
+        }
+
+        #country {
+            grid-area: 2 / 1 / 3 / 5;
+        }
+
+        
     } 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
